Fixed shifting text
Added some extra css styling in the product description page to prevent the text and button moving under the image if the product title is too long.

--- a/src/components/productDescription.css
+++ b/src/components/productDescription.css
@@ -1,13 +1,24 @@
+h2{
+    font-size: 2.5vw;
+}
 #page-container {
-    width:1000px;
+    width:100%;
     margin: 0 auto;
 }
 
 #image-container {
     float:left;
     padding-right: 10%;
+    border-style: dashed;
+    max-width: 50%;
 }
 
+#product-info-container {
+    float: left;
+    border-style: dashed;
+    width: 50%;
+    max-width: 50%;
+}
 #image{
     max-width: 100%;
     height: auto;
@@ -15,6 +26,7 @@
 
 #product-title{
     padding-top: 6%;
+    font-size: 3vw;
 }
 
 #product-price{
